Bug 262052 - Holidays spans two days
Summary: Holidays spans two days
Status: RESOLVED FIXED
Alias: None
Product: kdepimlibs
Classification: Applications
Component: kholidays (other bugs)
Version First Reported In: 4.6
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: John Layt
URL:
Keywords:
: 265134 283732 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-01-04 11:12 UTC by Thomas Tanghus
Modified: 2011-10-29 20:10 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Pic showing two doubled Danish holidays (9.61 KB, image/png)
2011-01-04 11:12 UTC, Thomas Tanghus
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Tanghus 2011-01-04 11:12:23 UTC
Created attachment 55546 [details]
Pic showing two doubled Danish holidays

Version:           4.5 pre (using KDE 4.5.90) 
OS:                Linux

In KOrganizer version 4.4.9 Holidays spans two days both in Week-view and Month-view but not in Event List. They also spans two days in the Summary Plugin in Kontact so I'm guessing it's actually i the KHolidays lib.

I use Denmark as my but it the same if I change to e.g. Sweden.

The error happens both in Kontact and in stand-alone KOrganizer.

Reproducible: Always

Steps to Reproduce:
Open KOrganizer. Select Configure/Time and date and select a holiday region.

Actual Results:  
Holidays show up as spanning two days even if it should just be one.

Expected Results:  
The holidays should only span one day (if they only last one days that is ;)

OS: Linux (i686) release 2.6.35-24-generic
Compiler: cc
Comment 1 Sergio Martins 2011-02-02 04:04:32 UTC
*** Bug 265134 has been marked as a duplicate of this bug. ***
Comment 2 John Layt 2011-02-03 01:36:23 UTC
Git commit f1eedac62c8c278e5a0bf608d7dbfa5489e6c5ec by John Layt.
Committed on 03/02/11 at 00:40.
Pushed by jlayt into branch '4.6'.

Fix KHolidays to stop returning duplicate event on day after a holiday.

The parser was incorrectly adding the duration onto the start date to
get an incorrect end date, so when requesting holidays one day at a
time like KOrganizer each holiday fell into 2 requests, whereas plasma
requests a single date range so no duplication occured.

CCBUG: 262052

M  +1    -1    kholidays/holiday.cpp     
M  +2    -2    kholidays/parsers/plan2/holidayparserdriverplan.cpp     

http://commits.kde.org/kdepimlibs/f1eedac62c8c278e5a0bf608d7dbfa5489e6c5ec
Comment 3 John Layt 2011-02-26 00:45:35 UTC
Git commit 39abd2a73a2191506a7b750ec0dc0c73b448452f by John Layt.
Committed on 03/02/2011 at 00:40.
Pushed by jlayt into branch 'master'.

Fix KHolidays to stop returning duplicate event on day after a holiday.

The parser was incorrectly adding the duration onto the start date to
get an incorrect end date, so when requesting holidays one day at a
time like KOrganizer each holiday fell into 2 requests, whereas plasma
requests a single date range so no duplication occured.

FORWARD-PORT: f1eedac62c8c278e5a0bf608d7dbfa5489e6c5ec
BUG: 262052

M  +1    -1    kholidays/holiday.cpp     
M  +2    -2    kholidays/parsers/plan2/holidayparserdriverplan.cpp     

http://commits.kde.org/kdepimlibs/39abd2a73a2191506a7b750ec0dc0c73b448452f
Comment 4 John Layt 2011-10-29 20:10:25 UTC
*** Bug 283732 has been marked as a duplicate of this bug. ***