Fix KHolidays to stop returning duplicate event on day after a holiday.

The parser was incorrectly adding the duration onto the start date to
get an incorrect end date, so when requesting holidays one day at a
time like KOrganizer each holiday fell into 2 requests, whereas plasma
requests a single date range so no duplication occured.

FORWARD-PORT: f1eedac62c8c278e5a0bf608d7dbfa5489e6c5ec
BUG: 262052