parsers/plan2/holidayparserdriverplan.cpp
@@ -692,10 +692,10 @@ void HolidayParserDriverPlan::setEvent( int jd, int observeOffset, int duration 
 
 void  HolidayParserDriverPlan::addHoliday( const QDate &observedDate, int duration )
 {
-    // Only set if event falls in requested date range
+    // Only set if event falls in requested date range, i.e. either starts or ends during range
     if ( m_parseCalendar->isValid( observedDate ) &&
          observedDate <= m_requestEnd &&
-         observedDate.addDays( duration ) >= m_requestStart ) {
+         observedDate.addDays( duration - 1 ) >= m_requestStart ) {
         KHolidays::Holiday holiday;
         holiday.d->mObservedDate = observedDate;
         holiday.d->mDuration = duration;
